--- a/MyTrade/MyTradeWebsite/about.html
+++ b/MyTrade/MyTradeWebsite/about.html
@@ -187,7 +187,7 @@
                 <div class="account-create-content">
                     <h2>Apply for an account in minutes</h2>
                     <p>Get your My Trade account today!</p>
-                    <a href="login.html" class="btn btn-primary">Get Your Account</a>
+                    <a href="http://mytrade.co.in/Home/Registration" class="btn btn-primary">Get Your Account</a>
                 </div>
             </div>
         </section>
