--- a/MyTrade/MyTradeWebsite/Coming.html
+++ b/MyTrade/MyTradeWebsite/Coming.html
@@ -35,6 +35,16 @@
             right: 0;
             margin: 0 auto;
         }
+        .circle-img.comingsoon img{
+            -webkit-animation-name: rotateMe;
+            animation-name: rotateMe;
+            -webkit-animation-duration: 35s;
+            animation-duration: 35s;
+            -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+            -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
+        }
     </style>
 </head>
 <body>
@@ -53,7 +63,7 @@
                 <div class="container">
                     <div class="error-content">
                         <img src="assets/img/coming-soon.png" alt="error">
-                        <div class="circle-img">
+                        <div class="circle-img comingsoon">
                             <img src="assets/img/circle.png" alt="image">
                         </div>
 
