--- a/MyTrade/MyTradeWebsite/index.html
+++ b/MyTrade/MyTradeWebsite/index.html
@@ -710,3 +710,46 @@
         <!-- End Account Create Area -->
         
         <script src="assets/js/footer.js"></script>
+
+
+<div class="modal fade md" id="myModal" role="dialog" style="display: none;padding-top:100px;">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" onclick="closeModal();">&times;</button>
+            </div>
+            <div class="modal-body" style="color: black">
+                <div class="row">
+                    <img src="" id="img"/>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
+<script>
+    $(document).ready(function () {
+        $.ajax({
+            url: '/Home/GetBanner', type: 'get', dataType: 'json',
+            success: function (data) {
+                debugger;
+                if (data.Result == "yes") {
+                    document.getElementById('img').src = data.BannerImage;
+                }
+                else if (data.Result == "no") {
+                 
+                }
+            }
+        });
+        $("#myModal").modal('show');
+    })
+    function closeModal() {
+        jQuery.noConflict();
+        $("#myModal").hide();
+        //$('body').removeClass().removeAttr('style'); $('.modal-backdrop').remove();
+    }
+</script>
