--- a/MyTrade/MyTradeWebsite/index.html
+++ b/MyTrade/MyTradeWebsite/index.html
@@ -748,8 +748,8 @@
         });
     })
     function closeModal() {
-        jQuery.noConflict();
-        $("#myModal").hide();
+        //jQuery.noConflict();
+        $("#myModal").modal('hide');
         //$('body').removeClass().removeAttr('style'); $('.modal-backdrop').remove();
     }
 </script>
