--- a/MyTrade/MyTradeWebsite/index.html
+++ b/MyTrade/MyTradeWebsite/index.html
@@ -1,5 +1,14 @@
 <script src="assets/js/header.js"></script>
-
+<style>
+    span.close {
+    position: absolute;
+    right: 15px;
+    top: -5px;
+    font-size: 24px;
+    font-weight: 500;
+    cursor: pointer;
+}
+</style>
 <!-- Start Main Banner Area -->
 <div class="home-area">
     <div class="container">
@@ -716,11 +725,11 @@
     <div class="modal-dialog">
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" onclick="closeModal();">&times;</button>
-            </div>
-            <div class="modal-body" style="color: black">
-                <div class="row">
+            
+            <div class="modal-body" style="color: #fff; padding:0; border: 1px solid white; box-shadow: 4px 5px 8px 1px #d1cbcb;">
+                <!--<button type="button" class="close" data-dismiss="modal" onclick="closeModal();">&times;</button>-->
+                <span class="close" data-dismiss="modal" onclick="closeModal();">&times;</span>
+                <div class="modal-div">
                     <img src="" id="img"/>
                 </div>
             </div>
