--- a/MyTrade/MyTradeWebsite/index.html
+++ b/MyTrade/MyTradeWebsite/index.html
@@ -8,6 +8,12 @@
     font-weight: 500;
     cursor: pointer;
 }
+    .modal-banner{
+        color: #fff;
+        padding:0; 
+        border: 1px solid white; 
+        box-shadow: 4px 5px 8px 1px #d1cbcb;
+    }
 </style>
 <!-- Start Main Banner Area -->
 <div class="home-area">
@@ -726,7 +732,7 @@
         <!-- Modal content-->
         <div class="modal-content">
             
-            <div class="modal-body" style="color: #fff; padding:0; border: 1px solid white; box-shadow: 4px 5px 8px 1px #d1cbcb;">
+            <div class="modal-body modal-banner">
                 <!--<button type="button" class="close" data-dismiss="modal" onclick="closeModal();">&times;</button>-->
                 <span class="close" data-dismiss="modal" onclick="closeModal();">&times;</span>
                 <div class="modal-div">
