--- a/MyTradeMTG/MyTradeMTGWebsite/index.html
+++ b/MyTradeMTG/MyTradeMTGWebsite/index.html
@@ -15,7 +15,7 @@
                         <h2>Welcome to My Trade Forex</h2>
                         <p>Unlike Others forex only providers, we allows our client to gain exposure to multiple capital markets, thus allowing investors to develop a diverse portfolio from a single integrated account. </p>
                         <div class="home_btn">
-                            <a id="modal_sign" href="#modal" class="btn_one wow bounceIn" data-wow-delay=".6s">Sign Up</a>
+                            <a id="modal_sign" href="#modal" class="btn_one wow bounceIn" data-wow-delay=".6s">Get Started</a>
                             <a href="#about" class="btn_two wow bounceIn" data-wow-delay=".8s">learn More</a>
                         </div>
                     </div>
@@ -31,7 +31,7 @@
     <!-- END  HOME -->
     <!-- START COMPANY PARTNER LOGO  -->
     <div class="partner-logo section-padding">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row partner-bg">
                 <div class="col-lg-2 text-center no-padding">
                     <div class="partner">
@@ -110,35 +110,34 @@
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-sm-12 col-xs-12 text-center wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
-                    <div class="currency_content h-100">
-                        <h3>My Trade Coin</h3>
-                        <h5>to Currency Calculator</h5>
-                        <p>Lorem Idivsum is simply dummy text of the printing and typesetting industry.</p>
-                        <a href="#" class="btn_one">Register Now !</a>
-                    </div>
-                </div><!-- END COL -->
-                <div class="col-lg-6 col-sm-12 col-xs-12 text-center wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
-                    <div class="token_bg">
-                        <div class="ca-starts-in">
-                            <h1>Ico Starts In</h1>
-                            <p class="info_token">Token will start on April 3rd 2022</p>
-                            <div class="timer-area">
-                                <div data-countdown="2022/6/25"></div>
-                            </div>
+                <div class="col-lg-12 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
+                    <div class="row currency_content">
+                        <div class="col-lg-8">
+                            <h5>What is Forex Trading ?</h5>
+                            <p class="text-jusify">The proccess of buying and selling currencies is forex trading. With a daily turnover of a5 trillion, this is the biggest stock market in the world and it includes many individuals and many currencies. You exchange 'coin pairs' because you still purchase one currency using another currency.</p>
+                            <h5>What is Forex Market ?</h5>
+                            <p class="text-jusify">A global online network where traders buy and sell currencies is the foreign exchange market. It is the world's oldest and most liquid stock exchange. Demand and supply describe the exchange rate gaps that, in essence, decide the earnings of traders.</p>
                         </div>
-                        <div class="start-end">
-                            <div class="single_token">
-                                <h5>Start</h5>
-                                <p>Apr 03, 2022 <br />(10:00AM GMT)</p>
-                            </div>
-                            <div class="single_token">
-                                <h5>End</h5>
-                                <p>Apr 13, 2022 <br />(12:00PM GMT)</p>
-                            </div>
+                        <div class="col-lg-4">
+                            <img src="assets/img/trading.png" class="img-fluid"/>
+                        </div>
+                    </div>
+                    <div class="row currency_content">
+                        <div class="col-lg-4">
+                            <img src="assets/img/trading_2.png" class="img-fluid" />
+                        </div>
+                        <div class="col-lg-8">
+                            <h5>How big is Forex ?</h5>
+                            <p class="text-jusify">In April 2019, trade in FX market hit a6.6 trillion a day, up from a5.1 trillion three years earlier. FX derivatives rading growth, particularly in FX swaps, outpaced spot trading growth.</p>
+                            <h5>Why Forex Traders loose money ?</h5>
+                            <p class="text-jusify">Their aim is to be successful and get payouts as people reach the foreign exchange market. And in certain situations, by having a certain structure they may adopt and having the market working in their favour, they continue to be efficient. Sadly, however, an ordinary Forex Trader is set to fail because trading is a zero-sum game where another group fails while one group of traders succeeds.</p>
                         </div>
                     </div>
                 </div><!-- END COL -->
+                <!--<div class="col-lg-6 col-sm-12 col-xs-12 text-center wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
+
+                </div>-->
+                <!-- END COL -->
             </div><!-- END ROW -->
         </div><!-- END CONTAINER -->
     </section>
