--- a/MyTradeMTG/MyTradeMTGWebsite/error_page.html
+++ b/MyTradeMTG/MyTradeMTGWebsite/error_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">	
 <head>
-		<script src="assets/js/header.js"></script>
+		<script src="asset/js/header.js"></script>
     <style>
         #particles-js
         {
@@ -10,7 +10,7 @@
     </style>
 	</head>
 	
-    <body>
+    <body data-spy="scroll" data-offset="80">
 		<!-- START ABOUT -->
         
 		<section id="about" class="about_us section-padding mt-5">
@@ -29,7 +29,7 @@
 			</div><!--- END CONTAINER -->
 		</section>
 		<!-- END  ABOUT -->	
-		<script src="assets/js/footer.js"></script>
+		<script src="asset/js/footer.js"></script>
     </body>
 
 </html>
