--- a/MyTradeMTG/MyTradeMTGWebsite/error_page.html
+++ b/MyTradeMTG/MyTradeMTGWebsite/error_page.html
@@ -18,7 +18,7 @@
 				<div class="row pt-5">
 				  <div class="col-lg-12 col-sm-12 col-xs-12 text-center">
 					<div class="about-text">
-                        <h1 class="text-white">Incorrect Login Id Or Password <span><i class="fa fa-times-circle"></i></span></h1>
+                        <h1 class="text-white">Incorrect Login Id Or Password <span><a href="/Website/Index" class="fa fa-times-circle"></a></span></h1>
 
                         <div class="home_btn">
                             <a href="/Website/Index" class="btn_one wow bounceIn" data-wow-delay=".6s"><i class="fa fa-home"></i> Back to home</a>
