--- a/MyTradeMTG/Coming.html
+++ b/MyTradeMTG/Coming.html
@@ -55,7 +55,7 @@
             <div class="box"></div>
         </div>
     </div>
-    <img src="MyTradeMTGWebsite/assets/img/home-main.png" />
+    <!--<img src="MyTradeMTGWebsite/assets/img/home-main.png" />-->
     <!-- End Preloader -->
     <!-- Start Error Area -->
     <section class="error-area">
@@ -68,10 +68,9 @@
                             <img src="MyTradeMTGWebsite/assets/img/circle.png" alt="image">
                         </div>
 
-                        <h3>Cooming Soon</h3>
+                        <h3>Coming Soon</h3>
                         <p>We Are Almost Ready for Launch.</p>
-
-                        <a href="/User/UserDashboard" class="btn btn-primary">Go to Dashboard</a>
+                        <a href="/User/UserDashboard" class="btn btn-primary" style="color:#000000">Go to Dashboard</a>
                     </div>
                 </div>
             </div>
