--- a/MyTradeMTG/MyTradeMTG/Coming.html
+++ b/MyTradeMTG/MyTradeMTG/Coming.html
@@ -52,7 +52,7 @@
     <div class="preloader">
         <div class="loader">
             <div class="shadow"></div>
-            <div class="box"></div>
+            <!--<div class="box"></div>-->
         </div>
     </div>
     <!-- End Preloader -->
